[MOD] resolve responsive bug by adding text-align: center to all file

--- a/src/app/components/posts/posts.component.scss
+++ b/src/app/components/posts/posts.component.scss
@@ -1,20 +1,25 @@
 .list {
-    justify-content: center;
-    float: left;
-      display: flex;
-    list-style: square outside none;
-    margin-top: 50px;
-  }
-  
-  li {
-   display: block;
-  }
-  
+  display: inline-block;
+  text-align: center;
+}
+
+li {
+  display: inline-block
+}
+
+ul {
+  display: inline-block;
+}
+
+.mat-card {
+  display: inline-block;
+}
+
   .mat-card-image {
    width:  425px;
    height: 250px;
   }
-  
+
   .list2 {
     justify-content: center;
     float: left;
